Fix .h1 text-align

--- a/develop/css/responcive.scss
+++ b/develop/css/responcive.scss
@@ -476,7 +476,6 @@
     }
     .h1 {
         font-size: 16px;
-        text-align: center;
     }
     .open__item-text:nth-of-type(2) {
         width: initial;
